syntax = "proto3";

option csharp_namespace = "GrpcGetDataToMaster";

package MasterApi;
//import "google/protobuf/timestamp.proto";
// note: -sự lặp lại-tương đương với list hoặc IEnumerable<T>
// đặt tên file không dùng chữ hoa

//Service Gprc
service UserService {
	rpc GetUser(Params) returns (User) {}
	rpc GetDepartment(Params) returns (ListGetDepartment) {}
	rpc GetEmployee(Params) returns (ListGetEmployee) {}
	rpc GetStation(Params) returns (ListGetStation) {}
	rpc GetProject(Params) returns (ListGetProject) {}
	rpc GetCustomer(Params) returns (ListGetCustomer) {}
}
message Params {
 // string name =1;
}
message User{
  string UserName =1;
        string Password =2;
        bool InActive =3;
        string     Role =4;
        int RoleNumber =5;
        bool   Read =6;
        bool  Create =7;
        bool  Edit =8;
        bool   Delete =9;
        string    WarehouseId =10;
}

message BaseSelectDTO{
    string id=1;
    string name =2;
}

message ListGetDepartment{
    repeated BaseSelectDTO listGetDepartment=1;

}


message ListGetEmployee{
    repeated BaseSelectDTO listGetEmployee=1;

}


message ListGetStation{
    repeated BaseSelectDTO listGetStation=1;

}


message ListGetProject{
    repeated BaseSelectDTO listGetProject=1;

}


message ListGetCustomer{
    repeated BaseSelectDTO listGetCustomer=1;

}

















